--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="section">
       <div class="tittle">
-        <a href="https://twitter.com/SpoodSolana" target="_blank">
+        <a href="https://x.com/Spooder_Tron" target="_blank">
           <img
             src="./images/title.png"
             alt="KOKORO"
@@ -19,7 +19,7 @@
 
       <div class="button-container">
         <button id="btnTokenomics" style="background-color: lila; border: none; border-radius: 5px;">
-          <a href="https://raydium.io/" target="_blank" style="text-decoration: none;">
+          <a href="https://t.me/SpooderTron" target="_blank" style="text-decoration: none;">
             <img src="./images/1.png">
           </a>
         </button>
@@ -60,7 +60,7 @@
         </button>
       </div> -->
 
-      <a href="https://t.me/spoodermanportalonSOL" target="_blank">
+      <a href="https://t.me/SpooderTron" target="_blank">
         <img
           src="./images/sc-nobg3.png"
           alt="Extra Image"
